--- a/about.html
+++ b/about.html
@@ -48,13 +48,21 @@
               <div class="share__title"><span>相关链接 ———</span></div>
               <ul class="menu__itemList">
                 <li>
-                  <a href=""><img src="images/bili.svg" alt="" /></a>
+                  <a target="_blank" href="https://space.bilibili.com/28143147"
+                    ><img src="images/bili.svg" alt=""
+                  /></a>
                 </li>
                 <li>
-                  <a href=""><img src="images/git.svg" alt="" /></a>
+                  <a target="_blank" href="https://github.com/zmxxb"
+                    ><img src="images/git.svg" alt=""
+                  /></a>
                 </li>
                 <li>
-                  <a href=""><img src="images/inlink.svg" alt="" /></a>
+                  <a
+                    target="_blank"
+                    href="https://www.linkedin.com/in/jiahao-hou-b68a251bb/"
+                    ><img src="images/inlink.svg" alt=""
+                  /></a>
                 </li>
               </ul>
             </nav>
